# sdfs

./: .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md
admin/: bcache.py  cleancore.sh  (+62 more)
itest/yfs/: CMakeLists.txt  yshell.cc
itest/ylib/: CMakeLists.txt  aio_sync_test.c  bigfile_4g+.c  functest.c  functest.h  iotest.c  iotest.h  itest_bitmap.cc  itest_ylib.cc  md5.c  md5.h  test_bitmap.c  test_ec.c  test_fuse.c  test_seek.c  test_skiplist.c  ynfs_iotest.c
mds/: .gitignore  configure.in  todo
mds/docs/: arch.txt  mds_ha_arch.fig  pool.txt
mds/include/: yfsmds_conf.h
mds/mds/: CMakeLists.txt  Makefile.am  disk.c  diskpool.c  diskpool.h  main.c  mds.c  mds.h  mds_license.c  mds_main.c  mds_main.h  nodepool.c  nodepool.h  nodepool_hdd.c  nodepool_ssd.c
nfs/: CMakeLists.txt  Makefile.am  attr.c  attr.h  error.c  error.h  hostcache.c  hostcache.h  locate.h  main.c  mini_nlm.c  mountlist.c  nfs3.c  nfs_args.h  nfs_conf.h  nfs_events.c  nfs_events.h  nfs_job_context.h  nfs_mount.c  nfs_proc.c  nfs_proc.h  nfs_remove.c  nfs_state_machine.h  nlm4.c  nlm_async.c  nlm_async.h  nlm_events.c  nlm_events.h  nlm_job_context.h  nlm_lkcache.c  nlm_lkcache.h  nlm_nsm.c  nlm_nsm.h  nlm_state_machine.h  readdir.c  readdir.h  session.c  sunrpc_passive.c  sunrpc_proto.c  sunrpc_reply.c  (+6 more)
parser/: configure.in
parser/include/: Makefile.am
parser/lib/: CMakeLists.txt  Makefile.am  configure.c  confl.l  confy.y
test/: Makefile.am  cluster.conf  configure.in  exports.conf  ftp.conf  fuse_test.py  make_test.sh  redis.conf.tpl  run.sh  sdfs.conf  test.py  test_list.py
test/include/: keep
test/locks/: locktests
test/nfs_conf/: common.conf  ganesha.conf  nfs-ganesha  nfs-ganesha-config.sh  nfs-ganesha.service
test/script/: flock.py  ftp_test.py  group_test.py  nfs_test.py  quota_test.py  share_test.py  user_test.py
test/shell/: iops.sh  mirror_R.sh  mk2list.sh  webdownload.sh  yftp_cmp.sh
test/src/: Makefile.am  aio_sync_test.c  aio_test.c  bigfile_4g+.c  io_test.c  md5.c  md5.h  pread_test.c  test_aio.c  test_aio_lib.c  test_bitmap.c  test_seek.c  test_skiplist.c  testlock.c  yfsclitest.c  yftptest.c  ynfs_iotest.c
test/src/python/: disk_check.py  merge_chunk.py  test_ls.py  test_symlink.py  yfs_clear.sh  yfs_iotest.py  yfs_mount.sh  ynfs.py
yfs/: CMakeLists.txt  configure.in
yfs/cds/: CMakeLists.txt  Makefile.am  cds.c  cds.h  cds_hb.c  cds_hb.h  cds_lib.c  cds_lib.h  cds_volume.c  cds_volume.h  chkinfo.c  chkinfo.h  disk.c  disk.h  disk_mt.c  dpool.c  dpool.h  hb.h  main.c
yfs/include/: Makefile.am  cd_proto.h  chk_meta.h  chk_proto.h  chunk_journal.h  directory_quota_cache.h  disk_proto.h  file_proto.h  file_table.h  flock.h  group.h  group_quota_cache.h  inodec.h  leveldb_util.h  md_proto.h  node_proto.h  rep_proto.h  share.h  user.h  user_quota_cache.h  uss_sysstat.h  worm_cli_lib.h  write_crc.h  xattr.h  yfs_chunk.h  yfs_conf.h  yfs_dir.h  yfs_file.h  yfs_limit.h  yfs_md.h  yfscds_conf.h  yfscli_conf.h
yfs/libyfs/: dir.c  file.c  file_table.c  flock.c  group.c  node.c  posix_acl.c  posix_acl.h  quota.c  raw.c  super.c  user.c  worm_cli_lib.c  yfs_lib.c
yfs/python/cds_robot/: cds_robot.py  conf.py
yfs/python/libs/: daemon.py
yfs/python/libyfs/: Makefile  yfs.c
yfs/python/test/: test_yfs.py
yfs/tests/: Makefile.am  yfs_sanity.c
yfs/utils/: CMakeLists.txt  Makefile.am  cdsop_read.c  cmd.c  jnlfind.c  leveldb_test.c  mds_deletedjnl.c  mdsop_read.c  newrep.c  option.c  rebud_cds_jnl.py  rebuild_cds_jnl.py  rebuild_cdsjnl.c  rebuild_file.c  recycle.c  sdfs.health.c  sdfs.mon.c  snap_rollback.c  uss.admin.c  uss.attr.c  uss.cat.c  uss.cdstat.c  uss.chkstat.c  uss.chmod.c  uss.chown.c  uss.clone.c  uss.configdump.c  uss.cp.c  uss.du.c  uss.fallocate.c  uss.ffc.c  uss.group.c  uss.hsm.c  uss.license.c  uss.ln.c  uss.lobjck.c  uss.ls.c  uss.md5sum.c  uss.mdsdrop.c  uss.mdstat.c  (+49 more)
yftp/src/: CMakeLists.txt  Makefile.am  cmdio.c  cmdio.h  dataio.c  dataio.h  ftpcodes.h  ftpfeatures.c  ftpfeatures.h  main.c  postlogin.c  postlogin.h  prelogin.c  prelogin.h  session.c  session.h
yfuse3/: configure.in
yfuse3/src/: main.c
ylib/lib/: CMakeLists.txt  Makefile.am  analysis.c  array.c  array_table.c  async.c  atomic_id.c  auth.c  base64.c  base64_urlsafe.c  bh.c  bitmap.c  bmap.c  buffer.c  cJSON.c  cache.c  cmp.c  config.c  crc32.c  crcrs.c  daemon.c  dbg.c  dynarray.c  ec_isa_l.c  etcd-api.c  etcd.c  fnotify.c  hash.c  hash_table.c  heap.c  htable.c  job_dock.c  job_tracker.c  journal.c  kv.c  ll.c  lock.c  md5.c  mem.c  mem_cache.c  (+25 more)
ylib/lib/nls/: nls_cp936.c
ylib/tests/: Makefile.am  array_test.c  cache_test.c  cmd_test.c  crc32.c  heap_test.c  jnl_test.c  path.c  skiplist_test.c  splice.c
ynet/: CMakeLists.txt  configure.in
ynet/include/: conn.h  main_loop.h  maping.h  msgqueue.h  net_global.h  net_proto.h  net_table.h  netbios_passive.h  netbios_proto.h  netbios_reply.h  network.h  nodeid.h  rpc_table.h  sdevent.h  sunrpc_passive.h  sunrpc_proto.h  sunrpc_reply.h  ynet.h  ynet_conf.h  ynet_net.h  ynet_rpc.h  ynet_rpc_old.h
ynet/net/: conn.c  heartbeat.c  heartbeat.h  main_loop.c  maping.c  net_crc.c  net_events.c  net_events.h  net_lib.c  net_passive.c  net_rpc.c  net_rpc.h  net_table.c  net_xmit.c  net_xnect.c  network.c  nodeid.c  xnect.c  xnect.h
ynet/netbios/: netbios_passive.c  netbios_proto.c  netbios_reply.c
ynet/rpc/: msgqueue.c  rpc_lib.c  rpc_passive.c  rpc_proto.c  rpc_proto.h  rpc_reply.c  rpc_reply_old.c  rpc_request.c  rpc_request_old.c  rpc_table.c  rpc_xmit.c  rpc_xnect.c
ynet/sock/: sdevent.c  sock_buffer.c  sock_buffer.h  sock_passive.c  sock_tcp.c  sock_tcp.h  sock_udp.c  sock_udp.h  sock_unix.c  sock_xmit.c  sock_xnect.c  ynet_sock.h
ynet/tests/: Makefile.am  listener.c  msgqueue_cp.c  msgqueue_read.c  msgqueue_write.c  proxy.c  speaker.c
yweb/src/: CMakeLists.txt  Makefile.am  http_ops.c  http_ops.h  http_proto.c  http_proto.h  http_readdir.c  http_state_machine.c  http_state_machine.h  main.c  match.c  match.h  mime.c  mime.h  request.c  request.h  response.c  response.h  str.c  str.h  tdate_parse.c  tdate_parse.h
(+235 files in other folders)
