AC_INIT([test],[0.0.1])
AC_CANONICAL_TARGET
AM_INIT_AUTOMAKE

AC_PROG_CC
AC_PROG_LIBTOOL
AC_PROG_INSTALL
AC_CONFIG_HEADERS([include/config.h])

case $target_os in
    *linux*)    arch=linux;;
    *bsd*)      arch=bsd;;
    *)          arch=unknown;;
esac

if test "$ac_env_CFLAGS_set" != set; then
    CFLAGS="-Wall -W -g"
fi

CPPFLAGS="$CPPFLAGS -D_REENTRANT -I../../parser/include -I../../ynet/include -I../../ylib/include/ -I../../yfs/include/"

subdirs=" \
	src \
	"

AC_SUBST(subdirs)

AM_CONDITIONAL(LINUX, test "$arch" = linux)
AM_CONDITIONAL(BSD, test "$arch" = bsd)

AC_CONFIG_FILES([ \
	Makefile \
	src/Makefile \
	])

AC_OUTPUT
